desktop view completed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,11 @@ main {
   position: relative;
   width: 100%;
 }
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+app-beer-card {
+  display: contents;
+}
