--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,5 +1,10 @@
 <span>
-  <svg xmlns="http://www.w3.org/2000/svg" width="54" height="74">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="54"
+    height="74"
+    viewBox="0 0 54 74"
+  >
     <defs>
       <clipPath id="b"><rect width="54" height="74"></rect></clipPath>
     </defs>
