--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
 <main>
   <app-header> </app-header>
+  <app-section-wrapper>
+    <app-hero></app-hero>
+  </app-section-wrapper>
+  <app-section-wrapper>
+    <div *ngIf="isLoading; else loaded">Loading...</div>
+    <ng-template #loaded>
+      <app-wrapper-frame>
+        <div class="grid">
+          <ng-container *ngFor="let item of data">
+            <app-beer-card
+              [image]="item.image_url"
+              [title]="item.name"
+              [text]="item.brewers_tips"
+            ></app-beer-card>
+          </ng-container>
+        </div>
+      </app-wrapper-frame>
+    </ng-template>
+  </app-section-wrapper>
+  <app-footer></app-footer>
 </main>
