create reusable grid component and UI changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,7 @@ main {
   position: relative;
   width: 100%;
 }
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
-app-beer-card {
+
+/* app-beer-card {
   display: contents;
-}
+} */
