--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,15 +7,7 @@
     <div *ngIf="isLoading; else loaded">Loading...</div>
     <ng-template #loaded>
       <app-wrapper-frame>
-        <div class="grid">
-          <ng-container *ngFor="let item of data">
-            <app-beer-card
-              [image]="item.image_url"
-              [title]="item.name"
-              [text]="item.brewers_tips"
-            ></app-beer-card>
-          </ng-container>
-        </div>
+        <app-grid-item [data]="data"></app-grid-item>
       </app-wrapper-frame>
     </ng-template>
   </app-section-wrapper>
